UI upgrades 2
